--- a/index.html
+++ b/index.html
@@ -110,43 +110,43 @@
 											<a href="#" class="image"><img src="images/mydesk.jpg" alt="" /></a>
 											<h3 class="major">MyDesk Platform - Service Booking Management for SMBs</h3>
 											<p>MyDesk is a SaaS service booking management platform currently in development, built specifically for small and medium-sized businesses. It aims to simplify how SMBs manage their services and handle client appointments. Planned features include service scheduling, availability tracking, and a user-friendly booking interface—designed to support business growth with a smooth and scalable solution.</p>
-											<a href="https://mydesk.logivasoft.org" class="special">Go to site</a>
+											<a href="https://mydesk.logivasoft.org" class="special" target="_blank">Go to site</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/tetris.jpg" alt="" /></a>
 											<h3 class="major">Tetris Clone - Desktop Game</h3>
 											<p>A personal desktop game project recreating the classic Tetris experience. Features include core gameplay mechanics such as piece movement, rotation, line clearing, and basic collision detection. Built to explore game loops, real-time input handling, and UI rendering for desktop environments.</p>
-											<a class="special disabled">No link</a>
+											<a class="special disabled" target="_blank">No link</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/security.jpg" alt="" /></a>
 											<h3 class="major">Identity Verification SaaS Platform (NDA Protected)</h3>
 											<p>This platform enables businesses to remotely verify user identities by guiding users through document capture, facial recognition, and verification steps via mobile devices. It's used in industries where secure, remote onboarding is critical, such as finance or telecom.</p>
-											<a class="special disabled">NDA protected</a>
+											<a class="special disabled" target="_blank">NDA protected</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/qr.jpg" alt="" /></a>
 											<h3 class="major">Campaign Management & Customer Experience (CX) Studio Platform (NDA Protected)</h3>
 											<p>A product platform designed to help businesses manage marketing campaigns and deliver enhanced customer experiences through Progressive Web Apps (PWAs). The system provides a centralized space for configuring campaigns, managing customer experiences, and tracking product user engagement across multiple touchpoints.</p>
-											<a href="https://www.proqure.io" class="special">Go to site</a>
+											<a href="https://www.proqure.io" class="special" target="_blank">Go to site</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/calendar.jpg" alt="" /></a>
 											<h3 class="major">Class Booking Managment System</h3>
 											<p>A custom web application designed to support class scheduling and booking operations, tailored to meet the needs of class-based businesses.</p>
-											<a class="special disabled">NDA protected</a>
+											<a class="special disabled" target="_blank">NDA protected</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/clean.jpg" alt="" /></a>
 											<h3 class="major">MisterShield - Cleaning Service Booking System</h3>
 											<p>A simple custom web application built to manage cleaning service appointments. Core features include booking and appointment scheduling, staff management, service and location setup, with real-time updates reflected directly on the company's website.</p>
-											<a class="special disabled">NDA protected</a>
+											<a class="special disabled" target="_blank">NDA protected</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/gym.jpg" alt="" /></a>
 											<h3 class="major">F45 - Fitness Management System</h3>
 											<p>A custom web application developed for an F45 gym to support and streamline day-to-day fitness studio operations. The system was tailored to meet the unique needs of a high-paced group training environment, enhancing efficiency for both staff and members.											</p>
-											<a href="https://f45training.com" class="special">Go to site</a>
+											<a href="https://f45training.com" class="special" target="_blank">Go to site</a>
 										</article>
 									</section>
 								</div>
@@ -164,9 +164,9 @@
 									204/21 Malata Crescent<br />
 									Success, Western Australia, 6164
 								</li>
-								<li class="icon solid fa-phone" href="tel:+61424017374">(61) 424-017-374</li>
+								<li class="icon solid fa-phone" href="tel:+61424017374">(+61) 424-017-374</li>
 								<li class="icon solid fa-envelope"><a href="mailto:rhundell.lee@gmail.com">rhundell.lee@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/anthony-rhundell-lee-980744164">twitter.com/untitled-tld</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/anthony-rhundell-lee-980744164" target="_blank">LinkedIn</a></li>
 							</ul>
 						</div>
 					</section>
