--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Hi! I'm Anthony Rhundell Lee</h2>
 							<p>I am a full-stack developer with 9 years of experience in the web development industry, specializing in building web software applications and SaaS platforms. I'm passionate about crafting scalable, user-focused solutions that drive business success.</p>
+							<a class="button" href="docs/resume_anthony-lee_2025.docx">Download Resume</a>
 						</div>
 					</section>
 
